# mya

./: Cargo.toml  completition.sh  output.xml  readme.md
.circleci/: config.yml
aliases/: shell.yaml
snippets/: sc.yaml  shell.yaml
src/: action.rs  main.rs  util.rs
src/action/: help.rs  list.rs  run copy.rs  run.rs
src/action_handler/: list.rs  run.rs
src/alias/: loader.rs  model.rs
src/snippet/: loader.rs  model.rs
src/util/: string_util.rs
