[package]
name = "mya"
version = "0.1.0"
authors = ["helyes <helyesa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
colored = "1.9.2"
env_logger = "0.6.0"
log = "0.4.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = "1.1.1"
regex = "1"
